--- a/_includes/codeTable.html
+++ b/_includes/codeTable.html
@@ -9,12 +9,17 @@
         <label for="dt_department">Department</label>
         <select class="form-control" id="dt_department" name="dt_department" data-column="0">
           <option value=""></option>
-          {% for depts in site.data.code %}
-            {% assign dept = depts[1] %}
-            {% assign dName = site.data.ministeres-departments | where: "code", dept.deptCode %}
-            <option value="{{ dName[0].name[page.lang] }}">{{ dName[0].name[page.lang] }}</option>
+          {% for fptms in site.data.code %}
+            {% assign fptm = fptms[1] %}
+            {% for admins in fptm %}
+              {% assign admin = admins[1] %}
+            
+              {% assign aName = site.data.administrations.federal | where: "code", admin.adminCode %}
+              <option value="{{ aName[0].name[page.lang] }}">{{ aName[0].name[page.lang] }}</option>
+            {% endfor %}
           {% endfor %}
         </select>
+        
       </div>
       
       <div class="form-group">
@@ -22,14 +27,19 @@
         <select class="form-control" id="dt_licence" name="dt_licence" data-column="3">
           <option value=""></option>
           {% assign license_array = "" | split: ',' %}
-          {% for depts in site.data.code %}
-            {% assign dept = depts[1] %}
-            {% for release in dept.releases %}
-              {% for license in release.permissions.licenses %}
-                {% assign license_array = license_array | push: license %}
+          
+          {% for fptms in site.data.code %}
+            {% assign fptm = fptms[1] %}
+            {% for admins in fptm %}
+              {% assign admin = admins[1] %}
+              {% for release in admin.releases %}
+                {% for license in release.permissions.licenses %}
+                  {% assign license_array = license_array | push: license %}
+                {% endfor %}
               {% endfor %}
             {% endfor %}
           {% endfor %}
+                    
           {% assign license_array = license_array | group_by: "name" | sort: "name" %}
           {% for license in license_array %}
             <option value="{{ license.name }}">{{ license.name }}</option>
@@ -42,14 +52,19 @@
         <select class="form-control" id="dt_tag" name="dt_tag" data-column="4">
           <option value=""></option>
           {% assign tag_array = "" | split: ',' %}
-          {% for depts in site.data.code %}
-            {% assign dept = depts[1] %}
-            {% for release in dept.releases %}
-              {% for tag in release.tags[page.lang] %}
-                {% assign tag_array = tag_array | push: tag %}
+          
+          {% for fptms in site.data.code %}
+            {% assign fptm = fptms[1] %}
+            {% for admins in fptm %}
+              {% assign admin = admins[1] %}
+              {% for release in admin.releases %}
+                {% for tag in release.tags[page.lang] %}
+                  {% assign tag_array = tag_array | push: tag %}
+                {% endfor %}
               {% endfor %}
             {% endfor %}
           {% endfor %}
+          
           {% assign tag_array = tag_array | group_by: "" | sort: "name" %}
           {% for tag in tag_array %}
             <option value="{{ tag.name }}">{{ tag.name }}</option>
@@ -75,7 +90,7 @@
   <table class="wb-tables table table-striped table-hover" id="dataset-filter" data-wb-tables='{"order": [1, "asc"], "columnDefs": [{"targets": [4], "visible": false}]}'>
     <thead>
       <tr>
-        <th>Department</th>
+        <th>Administration</th>
         <th>Project Name</th>
         <th>Description</th>
         <th>Licence</th>
@@ -85,30 +100,34 @@
     </thead>
     <tbody>
       
-      {% for depts in site.data.code %}
-        {% assign dept = depts[1] %}
-        {% for release in dept.releases %}
-        <tr>
-          {% assign dName = site.data.ministeres-departments | where: "code", dept.deptCode %}
-          <td>{{ dName[0].name[page.lang] }}</td>
-          <td><a class="wb-lbx" title="{{ release.name[page.lang] }}" href="#{{ release.name[page.lang] | slugify }}">{{ release.name[page.lang] }}</a></td>
-          <td>{{ release.description[page.lang] }}</td>
-          <td>
-            {% for license in release.permissions.licenses %}
-              <a href="{{ license.URL[page.lang] }}" target="_blank">{{ license.name }}</a>&nbsp;
-            {% endfor %}
-          </td>
-          <td>
-            {% for tag in release.tags[page.lang] %}
-              {{ tag }}&nbsp;
-            {% endfor %}
-          </td>
-          <td>
-            <a href="{{ release.repositoryURL[page.lang] }}" target="_blank">
-              {{ release.repositoryURL[page.lang] | remove: "https://" | replace_first: "/", "                    " | truncate: 20, "" | rstrip }}
-            </a>
-          </td>
-        </tr>
+      {% for fptms in site.data.code %}
+        {% assign fptm = fptms[1] %}
+        {% for admins in fptm %}
+          {% assign admin = admins[1] %}
+          {% for release in admin.releases %}
+          <tr>
+            {% assign aName = site.data.administrations.federal | where: "code", admin.adminCode %}
+            <td>{{ aName[0].name[page.lang] }}</td>
+            <td><a class="wb-lbx" title="{{ release.name[page.lang] }}" href="#{{ release.name[page.lang] | slugify: 'pretty' }}">{{ release.name[page.lang] }}</a></td>
+            <td>{{ release.description[page.lang] }}</td>
+            <td>
+              {% for license in release.permissions.licenses %}
+                <a href="{{ license.URL[page.lang] }}" target="_blank">{{ license.name }}</a>&nbsp;
+              {% endfor %}
+            </td>
+            <td>{{ release.permissions.usageType }}</td>
+            <td>
+              {% for tag in release.tags[page.lang] %}
+                {{ tag }}&nbsp;
+              {% endfor %}
+            </td>
+            <td>
+              <a href="{{ release.repositoryURL[page.lang] }}" target="_blank">
+                {{ release.repositoryURL[page.lang] | remove: "https://" | replace_first: "/", "                    " | truncate: 20, "" | rstrip }}
+              </a>
+            </td>
+          </tr>
+          {% endfor %}
         {% endfor %}
       {% endfor %}
 
@@ -117,15 +136,17 @@
 </div>
 
 <!-- Modal Lightboxes -->
-{% for depts in site.data.code %}
-  {% assign dept = depts[1] %}
-  {% for release in dept.releases %}
-    <section id="{{ release.name[page.lang] | slugify }}" class="mfp-hide modal-dialog modal-content overlay-def">
-      <header class="modal-header">
-        <h2 class="modal-title">{{ release.name[page.lang] }}</h2>
-      </header>
-      <div class="modal-body">
-        <p><strong>{{ release.description[page.lang] }}</strong></p>
+{% for fptms in site.data.code %}
+  {% assign fptm = fptms[1] %}
+  {% for admins in fptm %}
+    {% assign admin = admins[1] %}
+    {% for release in admin.releases %}
+      <section id="{{ release.name[page.lang] | slugify }}" class="mfp-hide modal-dialog modal-content overlay-def">
+        <header class="modal-header">
+          <h2 class="modal-title">{{ release.name[page.lang] }}</h2>
+        </header>
+        <div class="modal-body">
+          <p><strong>{{ release.description[page.lang] }}</strong></p>
         <p>View source code:
           <a href="{{ release.repositoryURL[page.lang] }}" target="_blank">
               {{ release.repositoryURL[page.lang] | remove: "https://" | replace_first: "/", "                    " | truncate: 20, "" | rstrip }}
@@ -145,7 +166,8 @@
         {% if release.contact.phone != nil %}
           <p>Contact phone: {{ release.contact.phone }}</p>
         {% endif %}
-      </div>
-    </section>
+        </div>
+      </section>
+    {% endfor %}
   {% endfor %}
 {% endfor %}
