--- a/_includes/codeTable.html
+++ b/_includes/codeTable.html
@@ -12,11 +12,21 @@
           {% for fptms in site.data.code %}
             {% assign fptm = fptms[1] %}
             {% for admins in fptm %}
-              {% assign admin = admins[1] %}
-            
+              {% assign admin = admins[1] %}   
               {% assign aName = site.data.administrations.federal | where: "code", admin.adminCode %}
-              <option value="{{ aName[0].name[page.lang] }}">{{ aName[0].name[page.lang] }}</option>
+              {% if aName[0].name[page.lang] != nil %}
+                <option value="{{ aName[0].name[page.lang] }}">{{ aName[0].name[page.lang] }}</option>
+              {% endif %}
             {% endfor %}
+            
+            {% for admins in fptm %}
+              {% assign admin = admins[1] %}   
+              {% assign aName = site.data.administrations.municipal | where: "code", admin.adminCode %}
+              {% if aName[0].name[page.lang] != nil %}
+                <option value="{{ aName[0].name[page.lang] }}">{{ aName[0].name[page.lang] }}</option>
+              {% endif %}
+            {% endfor %}
+            
           {% endfor %}
         </select>
       </div>
@@ -132,7 +142,15 @@
           {% for release in admin.releases %}
           <tr>
             {% assign aName = site.data.administrations.federal | where: "code", admin.adminCode %}
-            <td>{{ aName[0].name[page.lang] }}</td>
+            {% if aName[0].name[page.lang] != nil %}
+              <td>{{ aName[0].name[page.lang] }}</td>
+            {% endif %}
+            
+            {% assign aName = site.data.administrations.municipal | where: "code", admin.adminCode %}
+            {% if aName[0].name[page.lang] != nil %}
+              <td>{{ aName[0].name[page.lang] }}</td>
+            {% endif %}
+            
             <td><a class="wb-lbx" title="{{ release.name[page.lang] }}" href="#{{ release.name[page.lang] | slugify: 'pretty' }}">{{ release.name[page.lang] }}</a></td>
             <td>{{ release.description[page.lang] }}</td>
             <td>
