--- a/_includes/codeTable.html
+++ b/_includes/codeTable.html
@@ -9,13 +9,14 @@
         <label for="dt_department">Administration</label>
         <select class="form-control" id="dt_department" name="dt_department" data-column="0">
           <option value=""></option>
+          {% assign admin_array = "" | split: ',' %}
           {% for fptms in site.data.code %}
             {% assign fptm = fptms[1] %}
             {% for admins in fptm %}
               {% assign admin = admins[1] %}   
               {% assign aName = site.data.administrations.federal | where: "code", admin.adminCode %}
               {% if aName[0].name[page.lang] != nil %}
-                <option value="{{ aName[0].name[page.lang] }}">{{ aName[0].name[page.lang] }}</option>
+                {% assign admin_array = admin_array | push: aName[0].name[page.lang] %}
               {% endif %}
             {% endfor %}
             
@@ -23,7 +24,7 @@
               {% assign admin = admins[1] %}   
               {% assign aName = site.data.administrations.provincial | where: "code", admin.adminCode %}
               {% if aName[0].name[page.lang] != nil %}
-                <option value="{{ aName[0].name[page.lang] }}">{{ aName[0].name[page.lang] }}</option>
+                {% assign admin_array = admin_array | push: aName[0].name[page.lang] %}
               {% endif %}
             {% endfor %}
             
@@ -31,10 +32,14 @@
               {% assign admin = admins[1] %}   
               {% assign aName = site.data.administrations.municipal | where: "code", admin.adminCode %}
               {% if aName[0].name[page.lang] != nil %}
-                <option value="{{ aName[0].name[page.lang] }}">{{ aName[0].name[page.lang] }}</option>
+                {% assign admin_array = admin_array | push: aName[0].name[page.lang] %}
               {% endif %}
             {% endfor %}
-            
+          {% endfor %}
+          
+          {% assign admin_array = admin_array | sort %}
+          {% for admin in admin_array %}
+            <option value="{{ admin }}">{{ admin }}</option>
           {% endfor %}
         </select>
       </div>
@@ -164,7 +169,7 @@
               <td>{{ aName[0].name[page.lang] }}</td>
             {% endif %}
             
-            <td><a class="wb-lbx" title="{{ release.name[page.lang] }}" href="#{{ release.name[page.lang] | slugify: 'pretty' }}">{{ release.name[page.lang] }}</a></td>
+            <td><a class="wb-lbx" title="{{ release.name[page.lang] }}" href="#{{ release.name[page.lang] | slugify }}">{{ release.name[page.lang] }}</a></td>
             <td>{{ release.description[page.lang] }}</td>
             <td>
               {% for license in release.permissions.licenses %}
@@ -205,25 +210,27 @@
         </header>
         <div class="modal-body">
           <p><strong>{{ release.description[page.lang] }}</strong></p>
-        <p>View source code:
+        <p>Source code:
           <a href="{{ release.repositoryURL[page.lang] }}" target="_blank">
               {{ release.repositoryURL[page.lang] | remove: "https://" | replace_first: "/", "                    " | truncate: 20, "" | rstrip }}
           </a>
         </p>
-        <p>View licence(s):
+        <p>Licence(s):
           {% for license in release.permissions.licenses %}
             <a href="{{ license.URL[page.lang] }}" target="_blank">{{ license.name }}</a>&nbsp;
           {% endfor %}
         </p>
+        <h3>Contact</h3>
         {% if release.contact.name != nil %}
-          <p>Contact name: {{ release.contact.name }}</p>
+          <p>{{ release.contact.name }}</p>
         {% endif %}
-        <p>Contact email:
-          <a href="mailto:{{ release.contact.email }}" target="_blank">{{ release.contact.email }}</a>
-        </p>
         {% if release.contact.phone != nil %}
           <p>Contact phone: {{ release.contact.phone }}</p>
         {% endif %}
+        {% if release.contact.email != nil %}
+          <p><a href="mailto:{{ release.contact.email }}" target="_blank">{{ release.contact.email }}</a></p>
+        {% endif %}
+        <p><a href="{{ release.contact.URL }}" target="_blank">{{ release.contact.URL }}</a></p>
         </div>
       </section>
     {% endfor %}
