--- a/_includes/ossTable.html
+++ b/_includes/ossTable.html
@@ -77,10 +77,7 @@
           <td>{{ oss.description[page.lang] }}</td>
           <td>
             {% for license in oss.licenses %}
-
-<a href="https://choosealicense.com/licenses/{{ license | downcase }}/" target="_blank">{{ license }}</a>&nbsp;
-
-
+              <a href="https://choosealicense.com/licenses/{{ license | downcase }}/" target="_blank">{{ license }}</a>&nbsp;
             {% endfor %}
           </td>
           <td>
@@ -88,7 +85,7 @@
               {{ tag }}&nbsp;
             {% endfor %}
           </td>
-          <td><a class="wb-lbx" title="{{ oss.name[page.lang] }}" href="#{{ oss.name[page.lang] | slugify }}_u">{{ oss.admininstrations.size }}</a></td>
+          <td>{{ oss.admininstrations.size }}</td>
           <td>
             <a href="{{ oss.homepageURL[page.lang] }}" target="_blank">{{ oss.homepageURL[page.lang] | remove: "https://" | rstrip }}</a>
           </td>
@@ -109,22 +106,22 @@
       </header>
       <div class="modal-body">
         <p><strong>{{ oss.description[page.lang] }}</strong></p>
-        <p>{{ oss }}</p>
-      </div>
-    </section>
-
-    <section id="{{ oss.name[page.lang] | slugify }}_u" class="mfp-hide modal-dialog modal-content overlay-def">
-      <header class="modal-header">
-        <h2 class="modal-title">{{ oss.name[page.lang] }} is being used by:</h2>
-      </header>
-      <div class="modal-body">
-        <ul>
-          {% for use in oss.admininstrations %}
-            {% assign aName = site.data.administrations.federal | where: "code", use.adminCode %}
-              <li>{{ aName[0].name[page.lang] }}</li>
-          {% endfor %}
-        </ul>
-        <p>{{ oss.admininstrations }}</p>
+        <p>Is being used by:</p>
+        {% for admin in oss.admininstrations %}
+          <div class="row">
+            {% assign aName = site.data.administrations.federal | where: "code", admin.adminCode %}
+            <div class="col-md-7">
+              <strong>{{ aName[0].name[page.lang] }}</strong>
+            </div>
+            {% for use in admin.uses %}
+              {% if use.contact.email != nil %}
+                <div class="col-md-5">{{ use.contact.email }}</div>
+              {% endif %}
+            {% endfor %}
+          </div>
+        {% endfor %}
+        
+        <!--<p>{{ oss }}</p>-->
       </div>
     </section>
 
