--- a/_includes/codeTable.html
+++ b/_includes/codeTable.html
@@ -81,8 +81,8 @@
       </div>
       
       <div class="form-group">
-        <label for="dt_licence">Licence</label>
-        <select class="form-control" id="dt_licence" name="dt_licence" data-column="3">
+        <label for="dt_license">License</label>
+        <select class="form-control" id="dt_license" name="dt_license" data-column="3">
           <option value=""></option>
           {% assign license_array = "" | split: ',' %}
           
@@ -145,13 +145,13 @@
 
 <!-- Data Table -->
 <div class="col-md-9">
-  <table class="wb-tables table table-striped table-hover" id="dataset-filter" data-wb-tables='{"order": [1, "asc"], "columnDefs": [{"targets": [4, 5 , 7], "visible": false}], "paging": false}'>
+  <table class="wb-tables table table-striped table-hover" id="dataset-filter" data-wb-tables='{"order": [1, "asc"], "columnDefs": [{"targets": [4,5,7,8,9,10,11,12,13,14], "visible": false}], "paging": false}'>
     <thead>
       <tr>
         <th>Administration</th>
         <th>Project Name</th>
         <th>Description</th>
-        <th>Licence</th>
+        <th>License</th>
         <th>Tags</th>
         <th>Organization</th>
         <th>Code Repo</th>
@@ -204,6 +204,43 @@
             <td>
               {{fptms[0] | capitalize}}
             </td>
+
+            <td>
+                {% for langauge in release.languages %}
+                {{ langauge }}&nbsp;
+                {% endfor %}
+            </td>
+
+            <td>
+                {% for adminCodee in admin.adminCode %}
+                {{ adminCodee }}&nbsp;
+                {% endfor %}
+            </td>
+            <td>
+                {% for status in release.status %}
+                {{ status }}&nbsp;
+                {% endfor %}
+            </td>
+            <td>
+                {% for vcs in release.vcs %}
+                {{ vcs }}&nbsp;
+                {% endfor %}
+            </td>
+            <td>
+                {% for relatedCode in release.relatedCode %}
+                {{ relatedCode }}&nbsp;
+                {% endfor %}
+            </td>
+            <td>
+                {% for downloadURL in release.downloadURL %}
+                {{ downloadURL }}&nbsp;
+                {% endfor %}
+            </td>
+            <td>
+                {% for version in release.version %}
+                {{ version }}&nbsp;
+                {% endfor %}
+            </td>
           </tr>
           {% endfor %}
         {% endfor %}
@@ -230,7 +267,7 @@
               {{ release.repositoryURL[page.lang] | remove: "https://" | replace_first: "/", "                    " | truncate: 20, "" | rstrip }}
           </a>
         </p>
-        <p>Licence(s):
+        <p>License(s):
           {% for license in release.licenses %}
             <a href="{{ license.URL[page.lang] }}" target="_blank">{{ license.spdxID }}</a>&nbsp;
           {% endfor %}
