--- a/_includes/codeTable.html
+++ b/_includes/codeTable.html
@@ -145,7 +145,7 @@
 
 <!-- Data Table -->
 <div class="col-md-9">
-  <table class="wb-tables table table-striped table-hover" id="dataset-filter" data-wb-tables='{"order": [1, "asc"], "columnDefs": [{"targets": [4,5,7,8,9,10,11,12,13,14], "visible": false}], "paging": false}'>
+  <table class="wb-tables table table-striped table-hover" id="dataset-filter" data-wb-tables='{"order": [1, "asc"], "columnDefs": [{"targets": [4,5,7,8,9,10,11,12,13,14,15,16,17], "visible": false}], "paging": false}'>
     <thead>
       <tr>
         <th>Administration</th>
@@ -204,7 +204,6 @@
             <td>
               {{fptms[0] | capitalize}}
             </td>
-
             <td>
                 {% for langauge in release.languages %}
                 {{ langauge }}&nbsp;
@@ -239,6 +238,21 @@
             <td>
                 {% for version in release.version %}
                 {{ version }}&nbsp;
+                {% endfor %}
+            </td>
+            <td>
+                {% for repositoryURL in release.repositoryURL %}
+                {{ repositoryURL }}&nbsp;
+                {% endfor %}
+            </td>
+            <td>
+                {% for homepageURL in release.homepageURL %}
+                {{ homepageURL }}&nbsp;
+                {% endfor %}
+            </td>
+            <td>
+                {% for date in release.date %}
+                {{ date }}&nbsp;
                 {% endfor %}
             </td>
           </tr>
