--- a/_includes/header.html
+++ b/_includes/header.html
@@ -49,17 +49,33 @@
     </div>
   </div>
 
-  <nav id="wb-sm" data-ajax-replace="https://cdn.canada.ca/gcweb-cdn-live/sitemenu/sitemenu-{{ page.lang }}.html" data-trgt="mb-pnl" class="wb-menu visible-md visible-lg" typeof="SiteNavigationElement">
+  <nav class="gcweb-menu" typeof="SiteNavigationElement">
     <div class="container nvbar">
-      <h2>{{ site.TopicsMenu[page.lang] }}</h2>
-      <div class="row"></div>
+      <h2 class="wb-inv">Menu</h2>
+      <button type="button" aria-haspopup="true" aria-expanded="false"><span class="wb-inv">Main </span>Menu <span class="expicon glyphicon glyphicon-chevron-down"></span></button>
+      <ul role="menu" aria-orientation="vertical" data-ajax-replace="../../../ajax/sitemenu-v2-en.html">
+        {% if page.lang == "en" %}
+          <li role="presentation"><a role="menuitem" href="./index.html">{{ site.title[page.lang] }}</a></li>
+          <li role="presentation"><a role="menuitem" href="./open-source-code.html">{{ site.OpenSourceCode[page.lang] }}</a></li>
+          <li role="presentation"><a role="menuitem" href="./open-source-software.html">{{ site.OpenSourceSoftware[page.lang] }}</a></li>
+          <li role="presentation"><a role="menuitem" href="./open-standards.html">{{ site.OpenStandards[page.lang] }}</a></li>
+          <li role="presentation"><a role="menuitem" href="./docs.html">Documentation</a></li>
+          <li role="presentation"><a role="menuitem" href="./open-source-code-groups.html">{{ site.OpenSourceCodeGroups[page.lang] }}</a></li>
+        {% else %}
+          <li role="presentation"><a role="menuitem" href="./index.html">{{ site.title[page.lang] }}</a></li>
+          <li role="presentation"><a role="menuitem" href="./code-source-ouvert.html">{{ site.OpenSourceCode[page.lang] }}</a></li>
+          <li role="presentation"><a role="menuitem" href="./logiciels-libres.html">{{ site.OpenSourceSoftware[page.lang] }}</a></li>
+          <li role="presentation"><a role="menuitem" href="./normes-ouvertes.html">{{ site.OpenStandards[page.lang] }}</a></li>
+          <li role="presentation"><a role="menuitem" href="./docs.html">Documentation</a></li>
+          <li role="presentation"><a role="menuitem" href="./code-source-ouvert-groupes.html">{{ site.OpenSourceCodeGroups[page.lang] }}</a></li>
+        {% endif %}
+      </ul>
     </div>
-  </nav>
+  </nav> 
 
   <nav id="wb-bc" property="breadcrumb">
     <h2>{{ site.YouAreHere[page.lang] }}:</h2>
     <div class="container">
-      <div class="row">
         <ol class="breadcrumb">
           <li><a href="https://www.canada.ca/{{ page.lang }}.html">{{ site.home[page.lang] }}</a></li>
           {% if page.ref != "home" %}
@@ -77,11 +93,10 @@
               <li><a href="./code-source-ouvert.html">{{ site.OpenSourceCode[page.lang] }}</a></li>
             {% endif %}
           {% endif %}
-
         </ol>
-      </div>
     </div>
   </nav>
+  
 </header>
 
 <main property="mainContentOfPage" class="container">
